argocd/messages-service/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: messages-database
  labels:
    app.kubernetes.io/name: database
    app.kubernetes.io/part-of: utfsm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: messages-database
  labels:
    app.kubernetes.io/name: database
    app.kubernetes.io/part-of: utfsm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  serviceName: messages-database
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: database
        app.kubernetes.io/part-of: utfsm
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "pg_isready -U $POSTGRES_USER"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "pg_isready -U $POSTGRES_USER"]
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 512Mi
---
