argocd/messages-service/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-from-messages-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: messages-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: messages-service
        - podSelector:
            matchLabels:
              job-name: messages-service-migrate
      ports:
        - protocol: TCP
          port: 5432
